dropshot/tests/fail/bad_channel25.stderr
error: channel handlers must have the following signature:
           async fn(
               rqctx: dropshot::RequestContext<MyContext>,
               [query_params: Query<Q>,]
               [path_params: Path<P>,]
               websocket_connection: dropshot::WebsocketConnection,
           ) -> dropshot::WebsocketChannelResult
  --> tests/fail/bad_channel25.rs:24:1
   |
24 | / async fn weird_types<'a>(
25 | |     _rqctx: RequestContext<T, Self::U>,
26 | |     _param1: Query<&'a QueryParams>,
27 | |     _param2: for<'b> TypedBody<&'b ()>,
28 | | ) -> Result<impl HttpResponse, HttpError> {
   | |_________________________________________^

error: endpoint `weird_types` must not have generics
  --> tests/fail/bad_channel25.rs:24:21
   |
24 | async fn weird_types<'a>(
   |                     ^^^^

error: endpoint `weird_types` must accept a RequestContext<T> as its first argument
  --> tests/fail/bad_channel25.rs:25:13
   |
25 |     _rqctx: RequestContext<T, Self::U>,
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^

error: endpoint `weird_types` must not have lifetime parameters in extractor
  --> tests/fail/bad_channel25.rs:26:21
   |
26 |     _param1: Query<&'a QueryParams>,
   |                     ^^

error: endpoint `weird_types` must not have lifetime bounds in WebsocketConnection
  --> tests/fail/bad_channel25.rs:27:14
   |
27 |     _param2: for<'b> TypedBody<&'b ()>,
   |              ^^^^^^^

error: endpoint `weird_types` must not have lifetime parameters in WebsocketConnection
  --> tests/fail/bad_channel25.rs:27:33
   |
27 |     _param2: for<'b> TypedBody<&'b ()>,
   |                                 ^^

error: endpoint `weird_types` must not have impl Trait in return type
  --> tests/fail/bad_channel25.rs:28:13
   |
28 | ) -> Result<impl HttpResponse, HttpError> {
   |             ^^^^^^^^^^^^^^^^^
